@@ -1,3 +1,14 @@
+2021-07-22  Devin Rousso  <drousso@apple.com>
+
+        [Live Text] [iOS] Analysis should also search for any App Clip codes
+        https://bugs.webkit.org/show_bug.cgi?id=228207
+
+        Reviewed by Wenson Hsieh.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView imageAnalysisGestureDidBegin:]):
+        (-[WKContentView imageAnalysisGestureDidTimeOut:]):
+
 2021-07-22  Aditya Keerthi  <akeerthi@apple.com>
 
         [iOS] Unable to open arxiv links on Chrome
